--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
     
 }
 
-.spoty-songs{
+.spoty-songs, .spoty-mix, .spoty-artist{
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -77,6 +77,36 @@
     width: calc(100% / 6 - 15px);
     height: 150px;
 
+}
+
+.spoty-collection{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    
+}
+.spoty-yours{
+    border: solid 1px red;
+    height: 200px;
+    width: 200px;
+    /* regole test */
+}
+
+.spoty-name{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.spoty-face{
+    border: solid 1px red;
+    height: 200px;
+    width: 200px;
+    /* regole test */
 }
 
 /* Fine Spoty Body */
