--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,63 @@
     flex-direction: row;
 }
 
+/* Inizio Side Bar */
+
 .Side-bar{
     border: 1px solid red;
     /* regole di test */
     width: 20%;
     height:1000px;
+
+    display: flex;
+    flex-direction:column ;
+    justify-content:space-between ;
 }
+
+.side-up{
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.logo{
+    border: 1px solid red;
+    height: 100px;
+    /* regole di test */
+
+    width: 100%;
+
+}
+
+.side-features{
+    border: 1px solid red;
+    height: 100px;
+    /* regole di test */
+
+    width: 100%;
+}
+
+.side-Playlist{
+    border: 1px solid red;
+    height: 100px;
+    /* regole di test */
+
+    width: 100%;
+}
+
+.side-profile{
+    border: 1px solid red;
+    height: 100px;
+    /* regole di test */
+
+    width: 100%;
+}
+
+
+
+
+/* Fine Side bar */
 
 /* Inizio Spoty Body */
 
