--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@
     border: 1px solid red;
     /* regole di test */
     width: 20%;
-    max-height:1000px;
+    max-width: 280px;
+    /* max-height:1000px; */
     padding-bottom: 100px;
 
     display: flex;
