--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@
 
 .spoty-selection ul li{
     list-style-type: none;
+    opacity: 0.7;
 }
 
 .spoty-list{
@@ -170,6 +171,14 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 15px;
+}
+.spoty-object{
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 10px
 }
 
 .spoty-album{
