Ri-fix dei blocchi

--- a/css/style.css
+++ b/css/style.css
@@ -19,23 +19,22 @@
 .Side-bar{
     border: 1px solid red;
     /* regole di test */
-    width: 20%;
-    max-width: 280px;
-    /* max-height:1000px; */
-    padding-bottom: 100px;
+    width: 230px;
+    height: calc(100vh - 100px);
+    
 
     display: flex;
     flex-direction:column ;
     justify-content:space-between ;
 
-    position: fixed;
+    /* position: fixed;
     bottom: 0;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 1; */
 
     background: #000000;
-    padding-top: 100px;
+    
 }
 
 
@@ -90,13 +89,13 @@
     border: 1px solid red;
 
     /* regole di test */
-    flex-grow: 1;
+    width: calc(100% - 230px);
     
     display: flex;
     flex-direction: column;
 
     padding-top: 200px;
-    padding-left: 300px;
+    
     padding-bottom: 150px;
     
     height: 100vh;
@@ -112,7 +111,7 @@
     height: 100px;
     /* regole di test */
     
-    width: 100%;
+    width: calc(100% - 230px);
 
     display: flex;
     flex-direction: row;
@@ -240,7 +239,7 @@
 .spoty-face{
     border: solid 1px red;
     height: 200px;
-    width: 200px;
+    width: calc(100% / 6 - 15px);
     /* regole test */
 }
 
@@ -301,7 +300,7 @@
         width: calc(100% / 5 - 15px);
     }
     .Spoty-body{
-        padding-left: 200px;
+        /* padding-left: 200px; */
     }
 }
 
@@ -313,8 +312,8 @@
         width: calc(100% / 3 - 15px);
     }
     .Spoty-body{
-        padding-left: 160px;
-        padding-top: 160px;
+        /* padding-left: 160px;
+        padding-top: 160px; */
     }
     
 
@@ -331,7 +330,7 @@
         width: calc(100% / 2 - 15px);
     }
     .Spoty-body{
-        padding-left: 100px;
+        /* padding-left: 100px; */
     }
     .spoty-selection ul{
         flex-wrap: wrap;
