--- a/css/style.css
+++ b/css/style.css
@@ -47,18 +47,43 @@
 
 .logo{
     border: 1px solid red;
-    height: 100px;
+    
     /* regole di test */
 
     width: 100%;
 
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
+
+.logo img{
+    width: 60%;
+}
+
+
 
 .side-features{
     border: 1px solid red;
-    height: 100px;
+    
     /* regole di test */
 
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+.home, .search, .library{
+    display: flex;
+    flex-direction: row;
+    width: calc(100% / 3 - 10px);
+    align-items: center;
+    gap: 8px;
+}
+
+.home .logo-home img, .search .logo-search img, .library .logo-library img{
     width: 100%;
 }
 
@@ -117,7 +142,8 @@
     flex-direction: row;
     justify-content: right;
 
-    padding: 10px;
+    padding: 30px;
+    padding-right: 40px;
 
     position: fixed;
     top: 0;
@@ -126,11 +152,18 @@
 
     background: #000000;
     
+    opacity: 0.4;
 
 }
 
 .button-upgrade{
-    padding: ;
+    padding: 10px ;
+
+    display: flex;
+    align-items: center;
+
+    border: 3px solid white;
+    border-radius: 20px;
 }
 
 .spoty-songs, .spoty-mix, .spoty-artist{
