--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: sans-serif;
+}
+
 /* regola di reset */
 
 .big-container{
@@ -54,10 +58,13 @@
 
     padding-top: 20px;
     padding-bottom: 30px;
+
+    /* da togliere nella media query mobile */
+    padding-left: 20px;
 }
 
 .logo img{
-    width: 60%;
+    height: 44px;
 }
 
 
@@ -72,28 +79,79 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    margin-bottom: 20px;
+
+    
+     /* da togliere nella media query mobile */
+     padding-left: 20px;
 }
 
 
 .home, .search, .library{
     display: flex;
     flex-direction: row;
-    width: calc(100% / 3 - 10px);
+   
     align-items: center;
     gap: 8px;
 }
 
 .home .logo-home img, .search .logo-search img, .library .logo-library img{
-    width: 100%;
+    width: 26px;
 }
 
 .side-Playlist{
     border: 1px solid red;
-    height: 100px;
+    /* height: 100px; */
     /* regole di test */
 
     width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    /* da togliere nella media query mobile */
+    padding-left: 20px;
+
 }
+
+.side-Playlist h2{
+
+    font-size: 20px;
+}
+.container-playlist{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow: auto;
+    height: 100vh;
+    max-height: 230px;
+
+}
+
+
+.side-Playlist .container-playlist .add-playlist{
+    
+    background-color: gray;
+    
+    padding: 10px;
+
+    font-size: 16px;
+}
+
+.side-Playlist .container-playlist ul{
+    list-style-type: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    font-weight: bold;
+
+    opacity: 0.7;
+}
+
 
 .side-profile{
     border: 1px solid red;
@@ -101,6 +159,13 @@
     /* regole di test */
 
     width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+     /* da togliere nella media query mobile */
+     padding-left: 20px;
 }
 
 
