--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,8 @@ body {
     flex-direction: column;
     gap: 10px;
     overflow: auto;
-    height: 100vh;
-    max-height: 230px;
+    height:calc(100vh - 430px) ;
+    
 
 }
 
@@ -314,8 +314,7 @@ body {
 }
 
 .spoty-album {
-    /* border: 1px solid red; */
-    /* regola di reset */
+   
     width: 100%;
     /* height: 150px; */
 
@@ -392,9 +391,8 @@ body {
 
 /* Inizio Footer */
 .footer-container {
-    border: 1px solid red;
-    /* height: 100px; */
-    /* test */
+  
+    height: 100px;
     width: 100%;
 
     display: flex;
@@ -414,9 +412,8 @@ body {
 }
 
 .footer-left {
-    border: solid 1px red;
-
-    /* regola di test */
+   
+    
 
     width: 30%;
 
@@ -456,39 +453,74 @@ body {
 }
 
 .footer-middle {
-    border: solid 1px red;
+    
 
-    /* regola di test */
-
+   
     width: 40%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+    color: white;
 
 }
 .up-middle{
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 30px;
+    
 
+}
+
+.icon-middle{
+    font-size: 28px;
 }
 
 .icon-left, .icon-right{
     display: flex;
     gap: 20px;
+    font-size: 20px;
+}
+
+.down-middle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+}
+
+.duration{
+    width: 120px;
+    height: 4px;
+    background: gray;
+    border-radius: 5px;
+
+
+
 }
 
 
 
 .footer-right {
-    border: solid 1px red;
-
-    /* regola di test */
-
+    
     width: 30%;
+
+    display: flex;
+    gap: 5px;
+    align-items: center;
+
+    color: white;
+
+    gap: 20px;
+    justify-content: flex-end;
 }
 
 
 /* fine Footer  */
+
+/*  */
 
 /* inizio Media Query */
 
