--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,11 @@ body {
 
 }
 
+#create{
+    font-weight: bold;
+    opacity: 0.7;
+}
+
 
 .side-Playlist .container-playlist .add-playlist {
 
@@ -193,6 +198,7 @@ body {
 
 .side-profile .shape img {
     height: 28px;
+    width: 28px;
     background-color: gray;
     border-radius: 50%;
 
@@ -256,6 +262,12 @@ body {
 
     border: 3px solid white;
     border-radius: 20px;
+
+    color: white;
+}
+
+#sub{
+    color: white;
 }
 
 .spoty-songs,
@@ -317,6 +329,9 @@ body {
    
     width: 100%;
     /* height: 150px; */
+
+    opacity: 1;
+
 
 }
 
@@ -492,11 +507,21 @@ body {
 }
 
 .duration{
-    width: 120px;
+    width: 170px;
     height: 4px;
     background: gray;
     border-radius: 5px;
 
+
+
+}
+
+.time{
+    width: 70%;
+    height: 4px;
+    background-color: white;
+    border-radius: 5px;
+    
 
 
 }
@@ -517,10 +542,66 @@ body {
     justify-content: flex-end;
 }
 
+.volume{
+    width: 120px;
+    height: 4px;
+    background: gray;
+    border-radius: 5px;
+}
+
+.intencity{
+    width: 30%;
+    height: 4px;
+    background-color: white;
+    border-radius: 5px;
+}
+
 
 /* fine Footer  */
 
-/*  */
+/* inzio Hover */
+
+/* hover side-Bar */
+
+.side-features p:hover{
+    opacity: 1;
+    padding-left: 3px;
+    border-left: 2px solid #C7F807;
+}
+
+/* hover Upgrade */
+
+.button-upgrade{
+    opacity: 1;
+}
+
+/* hover main */
+
+.spoty-selection ul li:hover{
+    opacity: 1;
+    border-bottom: 2px solid #C7F807;
+}
+
+.spoty-album:hover{
+    opacity: 0.5;
+}
+
+.spoty-upgrade:hover{
+    opacity: 1;
+}
+
+.spoty-upgrade .button-upgrade:hover{
+    transform: scale(1.3);
+}
+
+
+
+
+
+
+
+/* fine Hover */
+
 
 /* inizio Media Query */
 
@@ -624,5 +705,13 @@ body {
 
     .spoty-selection ul {
         flex-wrap: wrap;
+    }
+
+    .duration{
+        width: 130px;
+    }
+
+    .volume{
+        width: 40px;
     }
 }
